# wineapp

./: .gitignore  .pre-commit-config.yaml  Catalog_241W_35_temp_wine_list.txt  Catalog_241W_35_wine_list.csv  agent.py  agent_archived.py  app.py  klwines_auction_data.xlsx  langserve_app.py  main.py  models.py  pyproject.toml  server.py  temp_wine_list.txt  tools.py
agents/: agent.py
core/: timer.py  utils.py
core/clients/: openai.py  supabase.py
core/users/: service.py
core/wine/: model.py  service.py  wine_searcher.py
core/wines/: acker_auction_analysis.py  klwines_auction_analysis.py  model.py  service.py  wine_searcher.py
core/wines/analysis/: acker_auction_analysis.py  fix_unicode.py  klwines_analysis_v2.py  klwines_auction_analysis.py  klwines_auction_download.py  run_analysis.py  utils.py  zachys_analysis.py
crawler/: ws_content_crawler.py
data/: 2408_AuctionCatalogWithScores.xlsx  Catalog_241W_35.xlsx
llm/: extract_wines.py  gen_followup.py  structure_wine.py
scripts/: start_server.sh
tools/: recommendation.py  search.py  search_tool.py  wine_knowledge.py  wine_searcher_tool.py
