[tool.poetry]
name = "wineapp"
version = "0.1.0"
description = ""
authors = ["Jun Liu <antyser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.11"
streamlit = "^1.36.0"
langchain-openai = "^0.1.17"
langchain-community = "^0.2.10"
langgraph = "^0.1.11"
ipython = "^8.26.0"
python-dotenv = "^1.0.1"
google-search-results = "^2.4.2"
apify-client = "^1.7.1"
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"
langserve = {extras = ["all"], version = "^0.2.2"}
langchain-cli = "^0.0.25"
httpx = {extras = ["http2"], version = "^0.27.0"}
bs4 = "^0.0.2"
python-slugify = {extras = ["unidecode"], version = "^8.0.4"}
markdownify = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
